@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2023 DBeaver Corp and others
+ * Copyright (C) 2010-2025 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
  */
 package org.jkiss.dbeaver.model.navigator;
 
-import org.eclipse.core.runtime.IAdaptable;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
@@ -24,7 +23,7 @@ import org.jkiss.dbeaver.model.*;
 import org.jkiss.dbeaver.model.app.DBPProject;
 import org.jkiss.dbeaver.model.navigator.meta.DBXTreeItem;
 import org.jkiss.dbeaver.model.navigator.meta.DBXTreeNode;
-import org.jkiss.dbeaver.model.net.DBWHandlerConfiguration;
+import org.jkiss.dbeaver.model.net.DBWUtils;
 import org.jkiss.dbeaver.model.runtime.DBRProgressListener;
 import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.model.struct.DBSObject;
@@ -36,12 +35,12 @@ import java.util.List;
 /**
  * DBNDataSource
  */
-public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, IAdaptable
+public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, DBPAdaptable
 {
     private static final boolean USE_ICON_DECORATIONS = false; // Disabled in #9384
 
     private final DBPDataSourceContainer dataSource;
-    private DBXTreeNode treeRoot;
+    private final DBXTreeNode treeRoot;
 
     public DBNDataSource(@NotNull DBNNode parentNode, @NotNull DBPDataSourceContainer dataSource)
     {
@@ -51,6 +50,7 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, IAda
         registerNode();
     }
 
+    @Nullable
     @Override
     public DBNNode getParentNode()
     {
@@ -72,70 +72,85 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, IAda
         super.dispose(reflect);
     }
 
+    @Nullable
     @Override
     public DBPDataSourceContainer getObject()
     {
         return dataSource;
     }
 
+    @Nullable
     @Override
     public Object getValueObject()
     {
         return dataSource.getDataSource();
     }
 
+    @NotNull
     @Override
     public String getChildrenType() {
         final List<DBXTreeNode> metaChildren = treeRoot.getChildren(this);
         if (CommonUtils.isEmpty(metaChildren) || metaChildren.size() > 1) {
             return "?";
         } else {
-            return metaChildren.get(0).getChildrenTypeLabel(getDataSource(), null);
+            return metaChildren.getFirst().getChildrenTypeLabel(getDataSource(), null);
         }
     }
 
+    @Nullable
     @Override
     public Class<?> getChildrenClass() {
         final List<DBXTreeNode> metaChildren = treeRoot.getChildren(null); // Use null context because we don't need to filter nodes
         if (CommonUtils.isEmpty(metaChildren) || metaChildren.size() > 1) {
             return null;
         }
-        DBXTreeNode childNode = metaChildren.get(0);
+        DBXTreeNode childNode = metaChildren.getFirst();
         if (childNode instanceof DBXTreeItem) {
             return getChildrenClass((DBXTreeItem) childNode);
         }
         return null;
     }
 
+    @NotNull
     @Override
-    public String getNodeName()
-    {
+    public String getNodeDisplayName() {
         return dataSource.getName();
     }
 
+    @Nullable
     @Override
     public String getNodeDescription()
     {
         return dataSource.getDescription();
     }
 
+    @NotNull
     @Override
     public String getNodeFullName()
     {
-        return getNodeName();
+        return getNodeDisplayName();
     }
 
+    @NotNull
+    @Deprecated
     @Override
     public String getNodeItemPath() {
         return makeDataSourceItemPath(dataSource);
     }
 
     @Override
-    public boolean isManagable()
+    public boolean isManageable()
     {
         return true;
     }
 
+    @NotNull
+    @Override
+    public String getNodeId() {
+        return dataSource.getId();
+    }
+
+    @NotNull
     @Override
     public DBXTreeNode getMeta()
     {
@@ -148,10 +163,11 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, IAda
     }
 
     @Override
-    public boolean initializeNode(@Nullable DBRProgressMonitor monitor, DBRProgressListener onFinish) throws DBException {
+    public boolean initializeNode(@Nullable DBRProgressMonitor monitor, @Nullable DBRProgressListener onFinish) throws DBException {
         return DBUtils.initDataSource(monitor, dataSource, onFinish);
     }
 
+    @Nullable
     @Override
     public DBPImage getNodeIcon() {
         DBPImage image = super.getNodeIcon();
@@ -176,16 +192,11 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, IAda
     }
 
     public boolean hasNetworkHandlers() {
-        for (DBWHandlerConfiguration handler : dataSource.getConnectionConfiguration().getHandlers()) {
-            if (handler.isEnabled()) {
-                return true;
-            }
-        }
-        return false;
+        return !DBWUtils.getActualNetworkHandlers(dataSource).isEmpty();
     }
 
     @Override
-    public <T> T getAdapter(Class<T> adapter) {
+    public <T> T getAdapter(@NotNull Class<T> adapter) {
         if (adapter == DBNDataSource.class) {
             return adapter.cast(this);
         } else if (DBPDataSourceContainer.class.isAssignableFrom(adapter)) {
@@ -208,7 +219,7 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, IAda
     }
 
     @Override
-    public void rename(DBRProgressMonitor monitor, String newName)
+    public void rename(@NotNull DBRProgressMonitor monitor, @NotNull String newName)
     {
         dataSource.setName(newName);
         dataSource.persistConfiguration();
@@ -231,15 +242,14 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, IAda
     }
 
     @Override
-    public boolean supportsDrop(DBNNode otherNode)
-    {
+    public boolean supportsDrop(@Nullable DBNNode otherNode) {
         return otherNode == null || otherNode instanceof DBNDataSource ||
-            (otherNode instanceof DBNLocalFolder && ((DBNLocalFolder) otherNode).getFolder().canMoveTo(dataSource.getFolder()));
+            (dataSource.getFolder() != null && otherNode instanceof DBNLocalFolder oln &&
+                oln.getFolder().canMoveTo(dataSource.getFolder()));
     }
 
     @Override
-    public void dropNodes(Collection<DBNNode> nodes) throws DBException
-    {
+    public void dropNodes(@NotNull DBRProgressMonitor monitor, @NotNull Collection<DBNNode> nodes) {
         DBPDataSourceFolder folder = dataSource.getFolder();
         for (DBNNode node : nodes) {
             if (node instanceof DBNDataSource) {
@@ -263,7 +273,8 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, IAda
         return true;
     }
 
-    public DBNNode refreshNode(DBRProgressMonitor monitor, Object source) throws DBException
+    @Nullable
+    public DBNNode refreshNode(@NotNull DBRProgressMonitor monitor, @Nullable Object source) throws DBException
     {
         DBNNode node = super.refreshNode(monitor, source);
         if (node == this) {
@@ -278,6 +289,7 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, IAda
         clearNode(true);
     }
 
+    @NotNull
     @Override
     public String toString() {
         return dataSource.toString();
@@ -294,7 +306,7 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, IAda
 
     @NotNull
     public static String makeDataSourceItemPath(DBPDataSourceContainer dataSource) {
-        return NodePathType.database.getPrefix() + dataSource.getId();
+        return NodePathType.database.getPrefix() + DBNUtils.encodeNodePath(dataSource.getId());
     }
 
 }
