@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2023 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,6 +22,7 @@ import org.eclipse.swt.custom.SashForm;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
+import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.*;
 import org.jkiss.code.NotNull;
 import org.jkiss.dbeaver.DBException;
@@ -35,6 +36,7 @@ import org.jkiss.dbeaver.model.runtime.DefaultProgressMonitor;
 import org.jkiss.dbeaver.model.struct.*;
 import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.dbeaver.ui.UIUtils;
+import org.jkiss.dbeaver.ui.internal.UINavigatorMessages;
 import org.jkiss.dbeaver.ui.navigator.NavigatorUtils;
 import org.jkiss.dbeaver.ui.navigator.database.DatabaseNavigatorTree;
 import org.jkiss.dbeaver.ui.navigator.database.load.TreeNodeSpecial;
@@ -62,15 +64,17 @@ public class SearchDataPage extends AbstractSearchPage {
     private static final String PROP_HISTORY = "search.data.history"; //$NON-NLS-1$
 
     private static final String PROP_SOURCES = "search.data.object-source"; //$NON-NLS-1$
+    private static final String PROP_SHOW_CONNECTED = "search.data.show-connected-only"; //$NON-NLS-1$
 
     private Combo searchText;
 
-    private SearchDataParams params = new SearchDataParams();
-    private Set<String> searchHistory = new LinkedHashSet<>();
+    private final SearchDataParams params = new SearchDataParams();
+    private final Set<String> searchHistory = new LinkedHashSet<>();
 
     private DatabaseNavigatorTree navigatorTree;
 
-    private DBPProject currentProject;
+    private final DBPProject currentProject;
+    private boolean showConnected;
 
     public SearchDataPage() {
         super("Database objects search");
@@ -80,9 +84,13 @@ public class SearchDataPage extends AbstractSearchPage {
     @Override
     public void createControl(Composite parent) {
         super.createControl(parent);
+
+        showConnected = DBWorkbench.getPlatform().getPreferenceStore().getBoolean(PROP_SHOW_CONNECTED);
+
         initializeDialogUnits(parent);
 
-        Composite searchGroup = UIUtils.createComposite(parent, 1);
+        Composite searchGroup = new Composite(parent, SWT.NONE);
+        searchGroup.setLayout(new GridLayout(1, false));
         searchGroup.setLayoutData(new GridData(GridData.FILL_BOTH));
 
         searchText = new Combo(searchGroup, SWT.DROP_DOWN);
@@ -99,16 +107,15 @@ public class SearchDataPage extends AbstractSearchPage {
             updateEnablement();
         });
 
-        SashForm optionsGroup = new SashForm(parent, SWT.NONE);
+        SashForm optionsGroup = new SashForm(searchGroup, SWT.NONE);
         optionsGroup.setLayoutData(new GridData(GridData.FILL_BOTH));
 
         {
-            Group databasesGroup = UIUtils.createControlGroup(
+            Composite databasesGroup = UIUtils.createTitledComposite(
                 optionsGroup,
                 UISearchMessages.dialog_data_search_control_group_databases,
                 1,
-                GridData.FILL_BOTH,
-                0);
+                GridData.FILL_BOTH);
             databasesGroup.setLayoutData(new GridData(GridData.FILL_BOTH));
 
             DBPPlatform platform = DBWorkbench.getPlatform();
@@ -128,9 +135,14 @@ public class SearchDataPage extends AbstractSearchPage {
                     if (element instanceof TreeNodeSpecial) {
                         return true;
                     }
+                    if (showConnected) {
+                        if (element instanceof DBNDataSource ds && ds.getDataSource() == null ||
+                            element instanceof DBNLocalFolder lf && !lf.hasConnected()) {
+                            return false;
+                        }
+                    }
                     if (element instanceof DBNNode) {
-                        if (element instanceof DBNDatabaseFolder) {
-                            DBNDatabaseFolder folder = (DBNDatabaseFolder) element;
+                        if (element instanceof DBNDatabaseFolder folder) {
                             Class<? extends DBSObject> folderItemsClass = folder.getChildrenClass();
                             return folderItemsClass != null
                                 && (DBSObjectContainer.class.isAssignableFrom(folderItemsClass)
@@ -167,15 +179,25 @@ public class SearchDataPage extends AbstractSearchPage {
                 }
             });
 
+            final Button showConnectedCheck = new Button(databasesGroup, SWT.CHECK);
+            showConnectedCheck.setText(UINavigatorMessages.label_show_connected);
+            showConnectedCheck.setSelection(showConnected);
+            showConnectedCheck.addSelectionListener(new SelectionAdapter() {
+                @Override
+                public void widgetSelected(SelectionEvent e) {
+                    showConnected = showConnectedCheck.getSelection();
+                    treeViewer.refresh();
+                    DBWorkbench.getPlatform().getPreferenceStore().setValue(PROP_SHOW_CONNECTED, showConnected);
+                }
+            });
         }
 
         {
-            Composite optionsGroup2 = UIUtils.createControlGroup(
+            Composite optionsGroup2 = UIUtils.createTitledComposite(
                 optionsGroup,
                 UISearchMessages.dialog_data_search_control_group_settings,
                 2,
-                GridData.FILL_HORIZONTAL,
-                0);
+                GridData.FILL_HORIZONTAL);
             optionsGroup2.setLayoutData(new GridData(GridData.FILL_HORIZONTAL
                 | GridData.HORIZONTAL_ALIGN_BEGINNING
                 | GridData.VERTICAL_ALIGN_BEGINNING));
@@ -391,10 +413,10 @@ public class SearchDataPage extends AbstractSearchPage {
             if (node instanceof DBNDatabaseNode) {
                 DBSObject object = ((DBNDatabaseNode) node).getObject();
                 if (object instanceof DBSDataContainer || object instanceof DBSObjectContainer) {
-                    if (sourcesString.length() > 0) {
+                    if (!sourcesString.isEmpty()) {
                         sourcesString.append("|"); //$NON-NLS-1$
                     }
-                    sourcesString.append(((DBNDatabaseNode) node).getNodeItemPath());
+                    sourcesString.append(((DBNDatabaseNode) node).getNodeUri());
                 }
             }
         }
@@ -429,7 +451,7 @@ public class SearchDataPage extends AbstractSearchPage {
 
         if (!checkedNodes.isEmpty()) {
             navigatorTree.getViewer().setSelection(new StructuredSelection(checkedNodes));
-            DBNDataSource node = DBNDataSource.getDataSourceNode(checkedNodes.get(0));
+            DBNDataSource node = DBNDataSource.getDataSourceNode(checkedNodes.getFirst());
             if (node != null) {
                 navigatorTree.getViewer().reveal(node);
             }
